# DG2D

./: CMakeLists.txt  Ideas.md  Issues.md  Makefile  README.md  enums.hpp  globals.cpp  globals.hpp
Audio/: Audio.cpp  Audio.hpp
Collision/: AABB.cpp  AABB.hpp
Draw/: Draw.cpp  Draw.hpp
Math/: FPSutils.cpp  FPSutils.hpp  MathVars.hpp
Platform/: Platform.cpp  Platform.hpp
Textures/: Textures.cpp  Textures.hpp
addons/beep/: beep.h
addons/gzip/: compress.hpp  decompress.hpp  utils.hpp
demo/: main.cpp
events/: Handle_SDL_events.cpp  Handle_SDL_events.hpp
std/: STD.cpp  STD.h  STD.hpp  STD_cstring.cpp  STD_cstring.h  STD_cstring.hpp
ttf/: ttf.cpp  ttf.hpp
utils/: array.cpp  array.h  array.hpp  utils.cpp  utils.hpp
